Update SUMMARY.md, 二、找房租房.md, 关于《无债务-无犯罪记录证明》.md, 合同签署和房屋交接.md, 常用租房渠道及其流程.md, 租房考虑因素.md, 能否签署租房合同.md, 首次办理“户口”.md

--- a/二、找房租房.md
+++ b/二、找房租房.md
@@ -1,4 +1,12 @@
 > [danger] 本篇结构仍在调整优化中，影响阅读敬请谅解。
 
+> [info] 【学联提醒】
+> - 找房前，欢迎查看学联论坛[租房避雷贴](https://forum.acssz.org/d/794-zu-fang-bi-lei-tie)
+> - 考虑到苏黎世的租房市场形势，对于秋季入学的新生，一般**4-5月即可开始找房**，结合自身情况考虑房租、通勤、交通费等因素，筛选适合自己的房子，以尽量**避开7-11月的苏黎世找房高峰**
+> - 如在来瑞前未能找到心仪住房的，建议**退而求其次采用备选方案**，暂时放弃价格/舒适度/地段/便利程度等要求，先住下并安顿好，之后再在漫漫求学过程中寻找更好的房源。
+> - 若一直观望而不出手，则可能导致最后扑空，进而不得不长期住在酒店，性价比往往更低
+>
+> 学联预祝大家都能找到心仪的住房！
+
 在苏黎世，找房租房可以说是广大新老留学生的一大难题，供不应求的租房市场和与国内截然不同的租房流程使许多同学头疼不已。本篇从以下方面为大家提供在苏黎世找房租房的相关信息：
 ::catalog
