--- a/关于《无债务-无犯罪记录证明》.md
+++ b/关于《无债务-无犯罪记录证明》.md
@@ -10,7 +10,7 @@
 ➢ 办理时须携带护照及居留卡，一般无须预约，现场即可拿到文件
 ➢ 办理费用为17瑞郎（不接受信用卡支付，可使用现金或储蓄卡）
 - [通过邮局办理](<https://www.post.ch/de/standorte/behoerdendienstleistungen/betreibungsregisterauszug>)，费用较前者稍贵
-- 通过部分找房租房网站（如[Flatfox](<https://flatfox.ch/c/de/betreibungsauszug/?gclid=CjwKCAjwrranBhAEEiwAzbhNtUMG2GJTeBt3hnnZlITQi7dVPcNhlGRo115Jju5G-RNH41ZEV8WiVxoCOwIQAvD_BwE>)等）办理，但尚不明确其效力是否等同于前两者
+- 通过部分找房租房网站（如[Flatfox](<https://flatfox.ch/c/de/betreibungsauszug/?gclid=CjwKCAjwrranBhAEEiwAzbhNtUMG2GJTeBt3hnnZlITQi7dVPcNhlGRo115Jju5G-RNH41ZEV8WiVxoCOwIQAvD_BwE>)等）办理
  
 #### **1.3 注意事项**
 出租方（房东/中介/物业公司等）一般会要求你提供一个限定年份之内（如三年内、五年内）的《无债务证明》。如果你在此期间有过搬家换区甚至境内迁移（Kantonswechsel）的情况，还需要去其它曾用住址对应的债务局开具对应时间段的《无债务证明》。如有多次变更住址的经历，可能需要前往多个债务局分别进行办理。
