--- a/常用租房渠道及其流程.md
+++ b/常用租房渠道及其流程.md
@@ -4,13 +4,7 @@
 
 > [info] 本章节的表格内容使用电脑阅读体验更佳
 
-> [info] 【学联提醒】
-> - 找房前，欢迎查看学联论坛[租房避雷贴](https://forum.acssz.org/d/794-zu-fang-bi-lei-tie)
-> - 考虑到苏黎世的租房市场形势，对于秋季入学的新生，一般**4-5月即可开始找房**，结合自身情况考虑房租、通勤、交通费等因素，筛选适合自己的房子，以尽量**避开7-11月的苏黎世找房高峰**
-> - 如在来瑞前未能找到心仪住房的，建议**退而求其次采用备选方案**，暂时放弃价格/舒适度/地段/便利程度等要求，先住下并安顿好，之后再在漫漫求学过程中寻找更好的房源。
-> - 若一直观望而不出手，则可能导致最后扑空，进而不得不长期住在酒店，性价比往往更低
->
-> 学联预祝大家都能找到心仪的住房！
+
 
 ### **1. 租房流程概览**
 
@@ -29,7 +23,7 @@
 
 | 渠道及简介                                                                                                                                                                                                                                                                        | 优点                                                                                                                 | 缺点                                                                                                |
 | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------- |
-| [ETH\&UZH 联办租房平台](https://wohnen.ethz.ch/index.php?act=searchoffer)&#xA; *具体介绍和租房步骤见后文*                                                                                                                                                                                      | 平台自有房源：&#xA;- 回复速度快&#xA;- 申请成功率较高&#xA;- 房租相对便宜&#xA;- 室友都是学生&#xA;- 无需收入证明&#xA;- 可在国内远程找房&#xA;&#xA;第三方房源：&#xA;- 选择丰富 | 平台自有房源：&#xA;- 竞争激烈，新房源上架后很快抢空&#xA;- 每人只有一次分配房源的机会，选择余地小&#xA;&#xA;第三方房源&#xA;- 可能是骗子&#xA;- 房东可能只会德语 |
+| [ETH\&UZH 联办租房平台](https://wohnen.ethz.ch/index.php?act=searchoffer)&#xA; *具体介绍和租房步骤见后文*                                                                                                                                                                                      | 平台自有房源：&#xA;- 回复速度快&#xA;- 申请成功率较高&#xA;- 房租相对便宜&#xA;- 室友都是学生&#xA;- 无需收入证明&#xA;- 可在国内远程找房&#xA;&#xA;第三方房源：&#xA;- 选择丰富 | 平台自有房源：&#xA;- 竞争激烈，新房源上架后很快抢空&#xA;- 每人只有一次分配房源的机会，选择余地小&#xA;&#xA;第三方房源&#xA;- 可能是骗子&#xA;- 房东可能只会德语&#xA;- 获得回复概率较低 |
 | **学联合作伙伴**[Intermezzo](https://www.intermezzo.ch/)&#xA;*具体介绍和租房步骤见后文*                                                                                                                                                                                                        | - 价格相对优惠&#xA;- 沟通更加方便&#xA;- 有基本家具&#xA;- 可在国内远程找房                                                                   | - 竞争激烈，手慢即无（尤其7-11月高峰期）&#xA;                                                                      |
 | [Student Village](https://studentvillage.ch/en/) &&#xA;[Living Science](https://www.livingscience.ch/wohnen-studieren-zuerich/?L=0)&#xA; *ETH的学生宿舍，除官网（成功率极低）外一般是通过*[Facebook群组](https://www.facebook.com/groups/svzurich/)*和微信群（群名”SV的宝宝们“，常年满员或在满员边缘徘徊，可联系在群中的朋友择时将你拉入）找房* | - 室友都是学生&#xA;- 无需收入证明&#xA;- 有基本家具&#xA;- 在ETH Hönggerberg校区&#xA;- 限ETH学生（本硕博）申请                                     | - 竞争激烈&#xA;- 多人共享公共区域                                                                             |
 | [WOKO](https://www.woko.ch)&#xA;*苏黎世的学生租房平台*，*若博士在28岁前入住，之后可以继续续住。博士年收入超过26400CHF，每月要多交100CHF*                                                                                                                                                                               | - 可靠&#xA;- 价格优惠&#xA;- 无需收入证明&#xA;- 有基本家具                                                                           | - 竞争激烈&#xA;- 大多需提早起租&#xA;- 多人共享公共区域                                                               |
@@ -81,9 +75,9 @@
 * 平台（与WOKO合作的）自有房源，其一般有以下特征：
   ➢ 租金为550-770 CHF/月（近期价格有上调）
   ➢ 房源类别为”shared apartment“
-  ➢ 可用时间为自9月1日起
+  ➢ 可用时间为自9月1日（秋季学期）或2月1日（春季学期，此处有待核实）起
   ➢ 联系方式为<housing@ethz.ch>
-  ➢ 仅接受28以下人员申请
+  ➢ 28岁以下人员申请可能受限，见下文
 
 【第三步】找到属于后者（平台自有/WOKO房源）的心仪房源后，须通过邮件（<housing@ethz.ch>）发送租房申请，邮件中须包含：
 
