--- a/首次办理“户口”.md
+++ b/首次办理“户口”.md
@@ -107,8 +107,8 @@
 虽然相比于正式的居留证，这张确认函使用频率相对较低，但是也应**妥善保管**备用（即使已获得正式居留证）。例如，[办理地址变更](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/umzug.html)时便需要用到这张申报确认函上的参考号（具体根据所选报告方式有所不同）。
 
 > [info] *后期住址有所变更，需要办理住址变更申报的，或是因离开所住市县需要办理注销的，请参考*[生活篇《“户口”相关》章](35“户口”相关.md)。
-
-
+^
+### **5. 关于“收/出‘注册地址’”**
 ^
 
 ### **附录：本章节中英德术语互译**
