Update 关于《无债务-无犯罪记录证明》.md, 关于快递服务.md, 关于邻居噪音扰民的应对.md, 家具的置办和搬家相关.md, 常见赴瑞路线.md, 能否签署租房合同.md, 资金安全和常见骗局.md

--- a/关于《无债务-无犯罪记录证明》.md
+++ b/关于《无债务-无犯罪记录证明》.md
@@ -1,27 +1,35 @@
 > [success] 本章作者：俞玥、赵逸飞
 
-### **1. 《无债务证明》（Betreibungsauszug）**
+### **1. 《无债务证明》（Betreibungsauszug**）
+
 #### **1.1 《无债务证明》简介**
+
 《无债务证明》（Betreibungsauszug / Betreibungsregisterauszug）是一份官方文件，它记录了你在瑞士期间针对你启动的债务执行程序，简单来说就是记录了你是否有过被债务局催债的情况。房主/二房东/物业公司等在你递交租房申请材料时可能会需要你一并提交这份证明。
 
-#### **1.2 如何开具《无债务证明》**
-- 前往自己的住址所对应的债务局（Betreibungsamt）办理
-➢ 不同于原居委会（Kreisbüro），该机构未合并，可直接Google搜索“Betreibungsamt”+自己的邮编/所在区县来查找住址对应的债务局
-➢ 办理时须携带护照及居留卡，一般无须预约，现场即可拿到文件
-➢ 办理费用为17瑞郎（不接受信用卡支付，可使用现金或储蓄卡）
-- [通过邮局办理](<https://www.post.ch/de/standorte/behoerdendienstleistungen/betreibungsregisterauszug>)，费用较前者稍贵
-- 通过部分找房租房网站（如[Flatfox](<https://flatfox.ch/c/de/betreibungsauszug/?gclid=CjwKCAjwrranBhAEEiwAzbhNtUMG2GJTeBt3hnnZlITQi7dVPcNhlGRo115Jju5G-RNH41ZEV8WiVxoCOwIQAvD_BwE>)等）办理
- 
+#### **1.2 如何开具《无债务证明**》
+
+* 前往自己的住址所对应的债务局（Betreibungsamt）办理
+  ➢ 不同于原居委会（Kreisbüro），该机构未合并，可直接Google搜索“Betreibungsamt”+自己的邮编/所在区县来查找住址对应的债务局
+  ➢ 办理时须携带护照及居留卡，一般无须预约，现场即可拿到文件
+  ➢ 办理费用为17瑞郎（不接受信用卡支付，可使用现金或储蓄卡）
+* [通过邮局办理](https://www.post.ch/de/standorte/behoerdendienstleistungen/betreibungsregisterauszug)，费用较前者稍贵
+* 通过部分找房租房网站（如[Flatfox](https://flatfox.ch/c/de/betreibungsauszug/?gclid=CjwKCAjwrranBhAEEiwAzbhNtUMG2GJTeBt3hnnZlITQi7dVPcNhlGRo115Jju5G-RNH41ZEV8WiVxoCOwIQAvD_BwE)等）办理
+
 #### **1.3 注意事项**
+
 出租方（房东/中介/物业公司等）一般会要求你提供一个限定年份之内（如三年内、五年内）的《无债务证明》。如果你在此期间有过搬家换区甚至境内迁移（Kantonswechsel）的情况，还需要去其它曾用住址对应的债务局开具对应时间段的《无债务证明》。如有多次变更住址的经历，可能需要前往多个债务局分别进行办理。
 
 ^
 
-### **2. 《无犯罪记录证明》（Strafregisterauszug）**
-#### **2.1 《无犯罪记录证明》简介**
-如其名称所示，《无犯罪记录证明》（Strafregisterauszug）代表办理人在瑞士没有犯罪记录。有时，房主/二房东/物业公司等在你递交租房申请材料时可能会需要你一并提交这份证明。
-#### **2.2 如何开具《无犯罪记录证明》**
-- [线上办理](<https://www.e-service.admin.ch/crex/cms/content/strafregister/strafregister_de>)
-- [通过邮局办理](<https://www.post.ch/de/standorte/behoerdendienstleistungen/strafregisterauszug>)
+### **2. 《无犯罪记录证明》（Strafregisterauszug**）
 
-具体可参考[瑞士联邦司法警察部对此的介绍](<https://www.e-service.admin.ch/crex/cms/content/strafregister/uebersicht_de>)。
+#### **2.1 《无犯罪记录证明》简介**
+
+如其名称所示，《无犯罪记录证明》（Strafregisterauszug）代表办理人在瑞士没有犯罪记录。有时，房主/二房东/物业公司等在你递交租房申请材料时可能会需要你一并提交这份证明。
+
+#### **2.2 如何开具《无犯罪记录证明**》
+
+* [线上办理](https://www.e-service.admin.ch/crex/cms/content/strafregister/strafregister_de)
+* [通过邮局办理](https://www.post.ch/de/standorte/behoerdendienstleistungen/strafregisterauszug)
+
+具体可参考[瑞士联邦司法警察部对此的介绍](https://www.e-service.admin.ch/crex/cms/content/strafregister/uebersicht_de)。
