--- a/关于邻居噪音扰民的应对.md
+++ b/关于邻居噪音扰民的应对.md
@@ -1,1 +1,28 @@
 > [success] 本章作者：杨锦涛
+
+#### **1. 法定夜间休息时间Nachtruhe**&#x20;
+
+瑞士法定夜间休息时间位22:00到第二日早上7:00，夏令时周五、周六的夜间休息时间为23:00到次日7:00。在此时段内，安静的休息环境应该被尊重并被保证。因此，如果在**Nachtruhe**时段内有任何噪音影响到了休息，我们都有权要求停止产生噪音的对应活动，如Party，聚会等。
+
+#### ****
+
+#### **2. 首先尝试直接交涉**
+
+当噪音影响到了休息时，首先应该尝试**直接和相关活动负责人进行交涉**，可以自己单独去交涉，如有条件也可以约上多位室友共同前往交涉。交涉时，首先应该友好地和对方打招呼，并友好地询问谁是该活动的组织者，找到组织者后，应简单清晰明确地表达己方需求，如“The music should be turned down”“the music should be off”“Please keep your voice down when communicating”。
+
+一般来说，对方态度会比较友好而温和，因为它们确实违反了**Nachtruhe**的规定，在法律上处于劣势。但如果对方态度强硬，甚至出现了挑衅、冒犯的词汇，请尽快离开现场，不要和对方进一步冲突。
+
+^
+
+#### **3. 交涉无效时，报警**
+
+如果交涉无效，或噪音实际并未减弱，则可以选择报警。具体如下：
+
+* 通过谷歌地图确定Party的地址，自己查明楼层以及门牌号（屋顶的话就直接说屋顶就好了），然后拨打报警电话117，说明自己报告一例Party噪音，已经交涉但是交涉无效，然后**报出Party地址+楼层及门牌号（屋顶**），等待出警
+* 一般15分钟左右警察会到达地址楼下，然后**给你打电话，核实确认楼层和门牌号（屋顶**），确认完毕后，警察会去处理，一般处理时间半个小时左右，之后一般都会散场
+* **处理完毕后，警察会给你打电话**，说明已经处理完毕，并且告知如果警察走之后他们又重新开party，你可以打警员的私人机号，让负责的警员重新来现场处理。此时，**请表达对警察的感谢**，然后经过15分钟左右确定没有继续开Party了，就可以安然睡觉了
+
+在整个处理过程中，从报警、出警、到警察处理完现场，你都需要**保持清醒并做好接听警察来电的准备**，不能报完警后就去睡大觉了（一般也睡不着）。
+
+^
+^
