--- a/关于邻居噪音扰民的应对.md
+++ b/关于邻居噪音扰民的应对.md
@@ -18,9 +18,9 @@
 
 如果交涉无效，或噪音实际并未减弱，则可以选择报警。具体如下：
 
-* 通过谷歌地图确定Party的地址，自己查明楼层以及门牌号（屋顶的话就直接说屋顶就好了），然后拨打报警电话117，说明自己报告一例Party噪音，已经交涉但是交涉无效，然后**报出Party地址+楼层及门牌号（屋顶**），等待出警
+* 通过谷歌地图确定Party的地址，自己查明楼层以及门牌号（屋顶的话就直接说屋顶就好了），然后拨打报警电话117，说明自己报告一例Party/聚会噪音，已经交涉但是交涉无效，然后**报出Party地址+楼层及门牌号（屋顶**），等待出警
 * 一般15分钟左右警察会到达地址楼下，然后**给你打电话，核实确认楼层和门牌号（屋顶**），确认完毕后，警察会去处理，一般处理时间半个小时左右，之后一般都会散场
-* **处理完毕后，警察会给你打电话**，说明已经处理完毕，并且告知如果警察走之后他们又重新开party，你可以打警员的私人机号，让负责的警员重新来现场处理。此时，**请表达对警察的感谢**，然后经过15分钟左右确定没有继续开Party了，就可以安然睡觉了
+* **处理完毕后，警察会给你打电话**，说明已经处理完毕，并且告知如果警察走之后他们又重新开party/聚会，你可以打警员的私人机号，让负责的警员重新来现场处理。此时，**请表达对警察的感谢**，然后经过15分钟左右确定没有继续开Party了，就可以安然睡觉了
 
 在整个处理过程中，从报警、出警、到警察处理完现场，你都需要**保持清醒并做好接听警察来电的准备**，不能报完警后就去睡大觉了（一般也睡不着）。
 
