--- a/关于邻居噪音扰民的应对.md
+++ b/关于邻居噪音扰民的应对.md
@@ -18,7 +18,7 @@
 
 #### **3. 交涉无效时，报警**
 
-如果交涉无效，如噪音实际并未减弱，则可以选择报警。具体如下：
+如果交涉无效，噪音实际并未减弱，则可以选择报警。具体如下：
 
 * 通过谷歌地图确定Party的地址（请一定说清楚具体的**街道名+门牌号**，如Paul-Feyerabend-Hof 1），查明**楼层**以及**房间号**（屋顶的话就直接说屋顶就好了），然后拨打报警电话117，说明自己报告一例Party噪音，已经交涉但是交涉无效，然后**报出Party地址（街道名+门牌号）+楼层及房间号**，等待出警
 * 一般15分钟左右警察会到达该地址楼下，然后**给你打电话，核实确认楼层和房间号**，确认完毕后，警察会去处理，一般处理时间半个小时左右，之后一般都会散场
