--- a/关于邻居噪音扰民的应对.md
+++ b/关于邻居噪音扰民的应对.md
@@ -2,7 +2,7 @@
 
 #### **1. 法定夜间休息时间Nachtruhe**&#x20;
 
-苏黎世法定夜间休息时间为22:00到第二天早上7:00，夏令时周五、周六的夜间休息时间为23:00到次日7:00。在此时段内，安静的休息环境应该被尊重并被保证。因此，如果在**Nachtruhe**时段内有任何噪音影响到了休息，我们都有权要求停止该活动，如Party，聚会等。
+苏黎世法定夜间休息时间为22:00到第二天早上7:00，夏令时周五、周六的夜间休息时间为23:00到次日7:00。在此时段内，安静的休息环境应该被尊重并被保证。因此，如果在**Nachtruhe**时段内有任何噪音影响到了休息，我们都有权要求停止该活动，如Party、聚会等。
 
 > <https://www.stadt-zuerich.ch/pd/de/index/das_departement/medien/medienmitteilung/2011/november/111124a.html>
 
