--- a/瑞士银行卡的办理和使用.md
+++ b/瑞士银行卡的办理和使用.md
@@ -2,21 +2,21 @@
 
 > [info] 本章节的表格内容使用电脑阅读体验更佳
 
-> [danger] 【学联提醒】*储蓄卡（Debit）可以正式汇款转账，但预付卡（Prepaid/Credit卡）不行，且预付卡内资金无法转回储蓄卡，而只能自己购物消费或使用Twint进行非正式场合的转账交易。因此，请避免将大量金额一次性充入预付卡，以避免后期无法进行正式转账（如缴纳房租、学费等）。*
+> [danger] 【学联提醒】*储蓄卡（Debit）可以正式汇款转账，但预付卡（Prepaid/Credit卡）不行，且预付卡内资金无法转回储蓄卡，而只能自己购物消费或使用Twint进行非正式场合的转账交易。因此，请避免将大量金额一次性充入预付卡，以避免后期无法进行正式转账（如缴纳房租、学费等*）。
 
 ### **1. 实体银行**
 
-| 银行名称 | 瑞银集团 UBS | 瑞士邮政银行 PostFinance | 苏黎世州州立银行 &#xA;Zürcher Kantonalbank (ZKB) |
-| -------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------- |
-| 账户及银行卡 | **Pure**: UBS Personal Account（主要用于支付，绑定debit card）和UBS Savings Account （主要用于储蓄），**prepaid**和debit card。&#xA;**Pro**: UBS Personal Account和UBS Savings Account，Standard **credit** card和debit card | Student account （支付账户，可选瑞法或欧元，绑定PostFinance Card），Savings account（储蓄账户，可选瑞法或欧元），PostFinance Card （debit card）, Mastercard Value （prepaid）或者 Classic/Standard credit card | ZKB Bildung plus Konto（支付账户），ZKB Bildung plus Sparkonto（储蓄账户），ZKB Visa Debit STUcard（与支付账户绑定），Basic/Standard credit card or Prepaid Mastercard |
-| 开户       | 可以[在线开户](https://www.ubs.com/ch/en/private/accounts-and-cards/bundles/key4.html#download-app)，线下的话去离住址最近的分行填一些表就可以了                                                                                | 可以[在线开户](https://www.postfinance.ch/en/private/products/accounts/personal-account-chf/open-a-private-account-in-chf.html)，线下的话填一些表就可以了                                   | [ZKB学生套餐在线开户](https://www.zkb.ch/de/private/konten-karten/pakete-jugendliche-studierende/zkb-student.html)，线下的话填一些表就可以了                        |
-| 存款利息     | UBS Personal Account: 100000瑞法以下：0.10%。UBS Savings Account: 2023年五月一日起：50000瑞法以下：0.75%。50000瑞法以上：0.25%                                                                                             | Student Account: 25000瑞法或15000欧元以下: 0.25%。Youth savings account：25000瑞法/ 15000欧元以上：0.75%（CHF）/0.5%（EUR）                                                                  | 支付账户：25000瑞法以下：0.25%。储蓄账户：25000瑞法以下：0.75%。250000瑞法以下：0.25%                                                                                     |
-| 免费存取款地点  | UBS的ATM机                                                                                                                                                                                           | PostFinance的ATM机，邮局/Migros/Manor/Spar/SBB/Coop Pronto Shops/Denner（主要是超市和商店）也可以免费取款                                                                                      | ZKB自己的取款机                                                                                                                                      |
-| 境外可以使用吗  | 可以，但有手续费                                                                                                                                                                                           | 不可以                                                                                                                                                                      | 可以，但有手续费                                                                                                                                       |
-| 优惠/优点    | 开户送价值50瑞法的**Key Club points** 可用于消费，开户可将别人列为推荐人（推荐人可享受额外优惠）                                                                                                                                        | 接受程度最广                                                                                                                                                                   | ATM特别多，且支持存硬币；夜班公交（周五周六0：30以后）免费（正常票价5瑞法，不能打折）；有很多其它折扣，比如麦当劳和星巴克可打85折                                                                          |
-| 移动支付     | UBS TWINT                                                                                                                                                                                          | TWINT                                                                                                                                                                    | ZKB TWINT（可能只有德语）                                                                                                                              |
-| 汇率       | Mastercard exchange rate + 0.5% 有评价是比较吃亏，但无processing fee                                                                                                                                          | PostFinance自己的汇率，有评价是比较实惠，且转账给欧元区免费                                                                                                                                      | ZKB自己的汇率，有评价是一般，但转账给欧元区免费                                                                                                                      |
-| 其它注意事项   | Debit card类型尽量选Visa或者Mastercard，另外两种（V PAY 或者 Maestro）功能少一些                                                                                                                                        |                                                                                                                                                                          | 据说Prepaid卡接受程度较低                                                                                                                               |
+| 银行名称    | 瑞银集团 UBS                                                                                                                                                                                           | 瑞士邮政银行 PostFinance                                                                                                                                                       | 苏黎世州州立银行&#xA;Zürcher Kantonalbank (ZKB)                                                                                                        |
+| ------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------- |
+| 账户及银行卡  | **Pure**: UBS Personal Account（主要用于支付，绑定debit card）和UBS Savings Account （主要用于储蓄），**prepaid**和debit card。&#xA;**Pro**: UBS Personal Account和UBS Savings Account，Standard **credit** card和debit card | Student account （支付账户，可选瑞法或欧元，绑定PostFinance Card），Savings account（储蓄账户，可选瑞法或欧元），PostFinance Card （debit card）, Mastercard Value （prepaid）或者 Classic/Standard credit card | ZKB Bildung plus Konto（支付账户），ZKB Bildung plus Sparkonto（储蓄账户），ZKB Visa Debit STUcard（与支付账户绑定），Basic/Standard credit card or Prepaid Mastercard |
+| 开户      | 可以[在线开户](https://www.ubs.com/ch/en/private/accounts-and-cards/bundles/key4.html#download-app)，线下的话去离住址最近的分行填一些表就可以了                                                                                | 可以[在线开户](https://www.postfinance.ch/en/private/products/accounts/personal-account-chf/open-a-private-account-in-chf.html)，线下的话填一些表就可以了                                   | [ZKB学生套餐在线开户](https://www.zkb.ch/de/private/konten-karten/pakete-jugendliche-studierende/zkb-student.html)，线下的话填一些表就可以了                        |
+| 存款利息    | UBS Personal Account: 100000瑞法以下：0.10%。UBS Savings Account: 2023年五月一日起：50000瑞法以下：0.75%。50000瑞法以上：0.25%                                                                                             | Student Account: 25000瑞法或15000欧元以下: 0.25%。Youth savings account：25000瑞法/ 15000欧元以上：0.75%（CHF）/0.5%（EUR）                                                                  | 支付账户：25000瑞法以下：0.25%。储蓄账户：25000瑞法以下：0.75%。250000瑞法以下：0.25%                                                                                     |
+| 免费存取款地点 | UBS的ATM机                                                                                                                                                                                           | PostFinance的ATM机，邮局/Migros/Manor/Spar/SBB/Coop Pronto Shops/Denner（主要是超市和商店）也可以免费取款                                                                                      | ZKB自己的取款机                                                                                                                                      |
+| 境外可以使用吗 | 可以，但有手续费                                                                                                                                                                                           | 不可以                                                                                                                                                                      | 可以，但有手续费                                                                                                                                       |
+| 优惠/优点   | 开户送价值50瑞法的**Key Club points** 可用于消费，开户可将别人列为推荐人（推荐人可享受额外优惠）                                                                                                                                        | 接受程度最广                                                                                                                                                                   | ATM特别多，且支持存硬币；夜班公交（周五周六0：30以后）免费（正常票价5瑞法，不能打折）；有很多其它折扣，比如麦当劳和星巴克可打85折                                                                          |
+| 移动支付    | UBS TWINT                                                                                                                                                                                          | TWINT                                                                                                                                                                    | ZKB TWINT（可能只有德语）                                                                                                                              |
+| 汇率      | Mastercard exchange rate + 0.5% 有评价是比较吃亏，但无processing fee                                                                                                                                          | PostFinance自己的汇率，有评价是比较实惠，且转账给欧元区免费                                                                                                                                      | ZKB自己的汇率，有评价是一般，但转账给欧元区免费                                                                                                                      |
+| 其它注意事项  | Debit card类型尽量选Visa或者Mastercard，另外两种（V PAY 或者 Maestro）功能少一些                                                                                                                                        |                                                                                                                                                                          | 据说Prepaid卡接受程度较低                                                                                                                               |
 
 **有美国经历同学在UBS开户请注意**：
 
@@ -87,4 +87,5 @@
 > 马贤哲
 
 ^
+
 关于银联境外ATM取现，每卡每年银联取现限额为10万人民币等值外汇，每卡每天限制为1万元人民币等值外汇。“银联汇率”的瑞士法郎价格每天更新一次，约为北京时间下午16:30。注意！在国内建行或其他银行存的瑞郎在瑞士无法直接取现。建议在国内开通网银，在瑞士办好银行卡后可将国内的存款转到这边的银行卡
