Update .topwrite/assets/688c5f415a60ebf3a720b3ad35c3b8e.jpg, 关于驾照.md, 常用租房渠道及其流程.md, 自购单车-滑板车.md

--- a/自购单车-滑板车.md
+++ b/自购单车-滑板车.md
@@ -1,11 +1,28 @@
-> [success] 本章作者：赵逸飞
+> [success] 本章作者：赵逸飞、李敬淇
 
 > [warning]【学联提醒】*苏黎世市区地形崎岖，（尤其是学校附近）有大量斜坡地形。强烈建议大家实地体验后再决定是否使用自行车作为主要出行方式。如希望体验骑行乐趣但又不想过于疲惫的，可选择使用电助力自行车（e-Bike）。*
 
 ### **1. 关于自购单车出行**
+在苏黎世，自购一手单车的价格大约为数百至千余瑞郎不等（具体因自行车类型和档次不同而差别巨大），二手单车价格则会相对低廉。
+- 对于**网上购买一手单车**，可参照一般网购的方法，先在谷歌上以自己期望购买的单车类型（如Mountain Bike）为关键字进行搜索，再在首行推荐栏中进行选择。亦可前往[迪卡侬](<https://www.decathlon.ch/de/>)等运动商店的官网进行选购。
+- 如希望**线下购买一手单车**的，亦可前往迪卡侬等运动商店的门店（可在谷歌地图上以”Velo Store“为关键字进行搜索）进行选购。
+- 如希望**购买二手单车**的，可参考以下二手车网店：
+➢ [Velo Zürich](<https://www.velo-zuerich.ch/de/velo/fabrikat/gebraucht-kaufen>)
+➢ [Velomarkt](<https://velomarkt.ch/veloboerse/zuerich>)
+➢ [Anibis](<https://www.anibis.ch/de/c/motorrad-velo-fahrraeder/ort-zurich>)
+或在谷歌直接以“Zurich Occasion Velo”等为关键词进行检索。网购自行车时，需注意甄别信息真伪避免财产损失。另，有时，学生群聊中也会有人出售二手自行车，自行甄别即可。此外，ETH每年也会组织自行车二手市场（ETH Velobörse），如有兴趣可关注ETH官网相关消息。
 
 ^
-### **2. 关于自购滑板车出行**
+### **2. 关于自购电动滑板车出行**
+在苏黎世，自购一手电动滑板车的价格大约为数百瑞郎，二手滑板车价格则会相对低廉。购买渠道包含：
+- [小米官方网店](<https://mi-store.ch/c/E-Scooters>)
+- [Interdiscount电动滑板车分区](<https://www.interdiscount.ch/de/search?search=e-scooter>)
+- [Digitec电动滑板车分区](<https://www.digitec.ch/de/search?q=E-Scooter>)，亦有二手滑板车供选择
+- [Galaxus电动滑板车分区](<https://www.galaxus.ch/de/search?q=E-Scooter>)，亦有二手滑板车供选择
+
+亦可参照一般网购的方法，先在谷歌上以“E-Scooter Zurich”等为关键字进行搜索，再在首行推荐栏中进行选择。
 
 ^
 ### **3. 关于自有自行车/滑板车的防盗**
+> [warning] *本节内容待添加*
+
