--- a/00欢迎页.md
+++ b/00欢迎页.md
@@ -1,7 +1,6 @@
 :-: [![](.topwrite/assets/20171031_ACSSZ_Logo_01.png =390)](https://acssz.org/about/intro/)
 
-### :-: **苏黎世留学**
-## :-: **生活指南 / 新生手册**
+### :-: **苏黎世留学 - 新生手册**
 
 ^
 
@@ -9,7 +8,7 @@
 
 :-: ***Association of Chinese Students and Scholars in Zurich***
 
-:-: ***Verein der Chinesischen Studierenden und Gelehrten in Zürich***
+:-: ***Assoziation der Chinesischen Studierenden und Gelehrten in Zürich***
 
 ^
 
